# multiple_kinect_baxter_calibration

./: .clang-format  .gitignore  CMakeLists.txt  README.md  package.xml
files/: ar_marker_vis.rviz  baxter_kinect1_calibration.yaml  baxter_kinect1_pc.csv  baxter_kinect1_pc.yaml  baxter_kinect1_position.csv  baxter_kinect2_calibration.yaml  baxter_kinect2_calibration_ar.yaml  baxter_kinect2_calibration_pc.yaml  baxter_kinect2_pc.csv  baxter_kinect2_pc.yaml  baxter_kinect2_position.csv  baxter_kinect2_position_ar.csv  baxter_kinect2_position_pc.csv  baxter_kinect3_calibration.yaml  baxter_kinect3_pc.csv  baxter_kinect3_pc.yaml  baxter_kinect3_position.csv  baxter_kinect_1_calibration.yaml  baxter_kinect_2_calibration.yaml  baxter_kinect_3_calibration.yaml  baxter_kinect_anywhere_ar.csv  baxter_kinect_anywhere_ar.yaml  baxter_kinect_anywhere_calibration.yaml  baxter_kinect_anywhere_calibration_pc.yaml  baxter_kinect_anywhere_pc.csv  baxter_kinect_anywhere_pc.yaml  baxter_kinect_anywhere_position.csv  baxter_kinect_anywhere_position_pc.csv  baxter_kinect_calibration.yaml  baxter_realsense_pc.yaml  camera_parameters.cam  kinect_anywhere.cam  kinect_calibration.yaml  libfreenect.cam  long.csv  merge_pc.rviz  position_wrt_baxter.csv  position_wrt_baxter_kinect1.csv  position_wrt_baxter_kinect2.csv  position_wrt_baxter_kinect3.csv  (+8 more)
include/multiple_kinect_baxter_calibration/: csvfile.h  sphere_detector.h  utility.h
launch/: ar_tracking_debug.launch  calibration_compute.launch  calibration_compute_multi.launch  calibration_data_collector.launch  calibration_data_collector_multi.launch  calibration_data_recorder.launch  calibration_data_recorder_multi.launch  calibration_publisher.launch  data_recorder.launch  init.launch  kinects_visualization.launch  merge_pc.launch  merge_point_clouds.launch  show_all_pc.launch  show_all_point_cloud.launch
scripts/: ar_data_collector.py  baxter_controller.py  calibration_compute.py  calibration_compute_multi.py  calibration_publisher.py  change_grippers.py  data_collector.py  data_collector_ar.py  kinects_visualization.py  robot_controller.py  trajectory_viapoint_recorder.py  trajectory_waypoints_recorder.py
src/: data_collector.cpp  data_collector_multi.cpp  data_collector_pc.cpp  merge_pc.cpp  merge_point_clouds.cpp  new_sphere_detector.cpp  pc_data_collector.cpp  save_pcd.cpp  segment_image.cpp  show_all_pc.cpp  show_all_point_cloud.cpp  sphere_detector.cpp  sphere_detector_test.cpp  view_cloud.cpp  view_cloud_realtime.cpp  view_image.cpp  view_pc_realtime.cpp  view_pcd.cpp
srv/: GetEEPosition.srv  move_arm_to_waypoint.srv
