<?xml version="1.0"?>
<package>
  <name>multiple_kinect_baxter_calibration</name>
  <version>2.0.0</version>
  <description>The multiple_kinect_baxter_calibration package</description>

  <maintainer email="ravi2008joshi@gmail.com">ravi</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/ravijo/multiple_kinect_baxter_calibration</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <run_depend>libpcl-all</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>cmake_modules</run_depend>

  <export>
  </export>
</package>
